src/test/resources/purescript_examples/failing/ConflictingImports2.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith ScopeConflict\n')
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(ModuleName)
        PSASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(NamedBinder)
        <empty list>
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(ModuleName)
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('A')
        PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSASTWrapperElement(PositionedDeclarationRef)
          PSASTWrapperElement(ValueRef)
            PsiElement(identifier)('thing')
        PsiElement())(')')
        PsiElement(whitespace)('\n')
      PSASTWrapperElement(NamedBinder)
        <empty list>
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(ModuleName)
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('B')
        PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSASTWrapperElement(PositionedDeclarationRef)
          PSASTWrapperElement(ValueRef)
            PsiElement(identifier)('thing')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n-- Error due to referencing `thing` which is explicitly in scope as A.thing\n-- and B.thing\n')
      PSASTWrapperElement(TypeDeclaration)
        PSASTWrapperElement(TypeAnnotationName)
          PsiElement(identifier)('what')
          PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Type)
          PSASTWrapperElement(TypeAtom)
            PSASTWrapperElement(TypeConstructor)
              PSASTWrapperElement(Qualified)
                PSASTWrapperElement(TypeConstructor)
                  PsiElement(proper name)('Int')
                  PsiElement(whitespace)('\n')
      PSASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('what')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Value)
          PSASTWrapperElement(PrefixValue)
            PSASTWrapperElement(Var)
              PSASTWrapperElement(Qualified)
                PsiElement(identifier)('thing')
                PsiElement(whitespace)('\n')
